--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=${PORT:8080}
 server.address=0.0.0.0
 
 
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/BD_IncluTeach_Prueba2}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:1234}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
